<resources>
    <string name="app_name">King of the mountain</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="segmentOptionsTitle">Wybierz parametry wyświetlanych segmentów</string>
    <string name="segmentOptionsMinDist">Minimalny dystans</string>
    <string name="segmentOptionsMaxDist">Maksymalny dystans</string>
    <string name="segmentOptionsMinGrade">Minimalne nachylenie</string>
    <string name="segmentOptionsMaxGrade">Maksymalne nachylenie</string>
    <string name="segmentOptionsMinTailWind">Minimalny procent jazdy z wiatrem</string>
    <string name="segmentSearch">Szukaj</string>
    <string name="viewStarredSegments">Pokaż segmenty na mapie</string>
    <string name="starredSegmentsTitle">Ulubione segmenty</string>
</resources>
